# akrocansim

./: .gitignore  J1939.py  J1939DA_parser.py  LICENSE  README.md  __init__.py  build_exe.bat  canbustransmitter.py  gui.py  pyproject.toml  requirements.txt
src/: akrocansim_main.py  main.py
src/akrocansim/: J1939.py  J1939DA.py  __init__.py  __main__.py  caninterface.py  cannodes.py  config.py  dbc.py  gui.py  signaltools.py  transmitter.py  version_check.py
src/akrocansim/protocols/: J1939DA_parser.py  protocols.py
tests/: test_protocols.py
